app/static/css_all.css
/* line 6 */
body {
  background: #31284D;
  font-family: Helvetica, Arial, Sans-Serif;
}

/* line 10 */
#navbar_list {
  margin: 0;
  padding: 0;
  list-style-type: none;
  overflow: hidden;
  background-color: #31373F;
  height: 7vh;
}

/* line 18 */
#navbar_list li {
  float: left;
}

/* line 22 */
#navbar_list a {
  display: block;
  color: #828285;
  text-align: center;
  padding: 14px 16px;
  text-decoration: none;
}

/* line 29 */
.search-input {
  position: relative;
  top: 150px;
  left: 0;
  right: 0;
  text-align: center;
}

/* line 37 */
.search-summoner {
  border-radius: 10px;
  width: 600px;
  height: 30px;
  left: 50%;
  text-align: center;
}

/* line 44 */
.search-wrap {
  position: absolute;
  top: 15%;
  left: 0;
  right: 0;
  border-radius: 15px;
  width: 830px;
  min-height: 250px;
  margin: 30px auto;
  background-color: #D5D5D6;
  box-shadow: 1px 1px 1px 1px #888888;
}

/* line 57 */
.search {
  width: 300px;
  margin: 30px auto;
}

/* line 62 */
.top-wrapper {
  position: absolute;
  border-radius: 10px;
  top: 10%;
  left: 0px;
  right: 0;
  text-align: center;
  margin: 0px auto;
  background-color: #D5D5D6;
  width: 1200px;
  height: 280px;
}

/* line 74 */
.top-wrapper .itemBox {
  display: inline-block;
  position: relative;
  vertical-align: top;
}

/* line 80 */
.placeholder {
  width: auto;
}

/* line 83 */
.content-wrap {
  position: relative;
  top: 380px;
}

/* line 87 */
.rankedStat {
  background-color: #D5D5D6;
  text-align: center;
}

/* line 91 */
.mastery {
  position: relative;
  border-radius: 10px;
  left: 0px;
  right: 0;
  margin: 0px auto;
  text-align: center;
  background-color: #D5D5D6;
  width: 750px;
  height: 250px;
}
.gameInfo {
  position: relative;
  border-radius: 10px;
  left: 0px;
  right: 0;
  margin: 0px auto;
  text-align: center;
  background-color: #D5D5D6;
  width: 750px;
  height: 50px;
}

/* line 102 */
.performance-wrapper {
  position: relative;
  top: 1.5em;
  border-radius: 10px;
  left: 0px;
  right: 0;
  margin: 0px auto;
  background: #D5D5D6;
  width: 750px;
  height: 500px;
}

/* line 113 */
.mastery-content {
  margin-top: 1em;
}

/* line 116 */
.profile-container {
  margin-top: 2em;
}

/* line 119 */
.masteryBox {
  margin-right: 0.5em;
  text-align: center;
}

/* line 123 */
.imgBox {
  position: relative;
}

/* line 126 */
.championImg {
  max-width: 100%;
  max-height: 100%;
}

/* line 130 */
.champ-name {
  margin-top: 0;
}

/* line 133 */
.trendingBox {
  background-color: #D5D5D6;
}

#dropdown_menu {
  display: none;
  position: absolute;
  background-color: #31373F;
  list-style-type: none;
  margin-top: -1vh;
  padding:0;
  z-index: 100; 
}

#dropdown_menu li {
  display:list-item;
  position: relative;
  background-color: #31373F;
  text-align: right;
  width: 100%;
}

#username:hover > #dropdown_menu{
  display:inherit;
}

.home{
  height:93vh;
}

#homeimgwrap{
  height: 100%;
  overflow: hidden;
}

#homeimg{
  width: 100%;
}

#signup{
  color:black;
}

#search_history{
  position: relative;
  top: 160px;
  text-align: center;
}

#search_history li{
  display: inline;
}

.pure-u-1-3{
  position: absolute;
  max-height: 93vh;
  overflow:auto;
  max-width: 30%
}

.pure-u-2-3{
  position: absolute;
  left: 32%;
  max-height: 93vh;
  padding-top: 10vh;
}

